docs/errors/examples/named-argument-before-positional/named-argument-before-positional.grob
// E0008 — a positional argument appears after a named argument
// Eventual path: docs/errors/examples/named-argument-before-positional/named-argument-before-positional.grob
fn box(width: int, height: int = 10): int {
    return width * height
}

print(box(height: 2, 5))
